--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "twitter": "^1.2.5"
   }
 }
