--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-redis": "^3.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.7",
+    "redis": "^2.5.3",
     "serve-favicon": "~2.3.0",
     "twitter": "^1.2.5"
   }
