--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.7",
+    "redis": "^2.5.3",
     "serve-favicon": "~2.3.0",
     "twitter": "^1.2.5"
   }
