--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
     "body-parser": "~1.13.2",
     "connect-redis": "^3.0.2",
     "debug": "~2.2.0",
@@ -15,6 +17,8 @@
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.7",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "serve-favicon": "~2.3.0",
     "twitter": "^1.2.5"
   }
